--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
+       
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram Feed Test</title>
 
    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
