--- a/woodvibe.html
+++ b/woodvibe.html
@@ -39,32 +39,32 @@
 
                         <div class="col-sm-12 col-md-4 col-sm-> col-xs-2">
                             <a class="lightbox">
-                    <img src="/img/Gal2.jpg" alt="Bridge">
+                    <img src="../live/img/Gal2.jpg" alt="Bridge">
                 </a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-sm-> col-xs-2">
                             <a class="lightbox">
-                    <img src="/img/Gal9.jpg" alt="Park">
+                    <img src="../live/img/Gal9.jpg" alt="Park">
                 </a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-sm-> col-xs-2">
                             <a class="lightbox">
-                    <img src="/img/Gal3.jpg" alt="Tunnel">
+                    <img src="../live/img/Gal3.jpg" alt="Tunnel">
                             </a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-sm-> col-xs-2">
                             <a class="lightbox">
-                    <img src="/img/Gal6.jpg" alt="Coast">
+                    <img src="../live/img/Gal6.jpg" alt="Coast">
                 </a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-sm-> col-xs-2">
                             <a class="lightbox">
-                    <img src="/img/Gal5.jpg" alt="Coast">
+                    <img src="../live/img/Gal5.jpg" alt="Coast">
                 </a>
                         </div>
                         <div class="col-sm-6 col-md-4 col-sm-> col-xs-2">
                             <a class="lightbox">
-                    <img src="/img/Gal8.jpg" alt="Rails">
+                    <img src="../live/img/Gal8.jpg" alt="Rails">
                 </a>
                         </div>
 
