--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div id="wrapper">
     
 <div class="section hero-image  responsive-image">
-  <div class="logo "><img src="../live/img/Logo2.png" alt="Bridge" class=logo1></div>
+  <div class="logo "><img src="/img/Logo2.png" alt="Bridge" class=logo1></div>
 
   <div class="hero-text">
     <h1>Lets Create Together</h1>
     <p></p>
-   <a href="../live/woodvibe.html" type="button" class="btn btn-primary btn-lg btn-hero">Enter</a>
+   <a href="/Main/woodvibe.html" type="button" class="btn btn-primary btn-lg btn-hero">Enter</a>
   </div>
 </div>
 
